--- a/.github/workflows/obfuscate.yml
+++ b/.github/workflows/obfuscate.yml
@@ -4,9 +4,9 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - '**'  # 仅匹配分支推送，排除标签推送
+      - '**'
     paths:
-      - '明文源吗'
+      - 'raw_codes.js'  # 【修改点】监听这个新文件名的变化
 
 jobs:
   build-and-obfuscate:
@@ -31,12 +31,14 @@ jobs:
           const fs = require('fs');
           const path = require('path');
           
-          const sourceFileName = '明文源吗';
-          const outputFileName = '少年你相信光吗';
+          // 【修改点】定义新的输入和输出文件名
+          const sourceFileName = 'raw_codes.js';
+          const outputFileName = 'encoded_codes.js';
+          
           const sourceFilePath = path.join(process.cwd(), sourceFileName);
 
           if (!fs.existsSync(sourceFilePath)) {
-            console.error('错误：在路径 \'' + sourceFilePath + '\' 未找到源文件。请确保您的仓库根目录有名为 \'明文源吗\' 的文件。');
+            console.error('错误：在路径 \'' + sourceFilePath + '\' 未找到源文件。请确保您的仓库根目录有名为 \'' + sourceFileName + '\' 的文件。');
             process.exit(1);
           }
 
@@ -47,6 +49,7 @@ jobs:
             process.exit(1);
           }
 
+          // 这里保留了原本严格的混淆配置
           const obfuscationOptions = {
               compact: true,
               controlFlowFlattening: false,
@@ -92,10 +95,13 @@ jobs:
         run: |
           git config --global user.name 'GitHub Actions Bot'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-          git add '少年你相信光吗'
+          
+          # 【修改点】将新的输出文件加入暂存区
+          git add 'encoded_codes.js'
+          
           if git diff --staged --quiet; then
             echo "No changes to commit, the obfuscated file is already up-to-date."
           else
-            git commit -m "部署用这个"
+            git commit -m "Update obfuscated code: encoded_codes.js"
             git push
           fi
